--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "fullcalendar": "^3.0.0",
+    "fullcalendar": "https://github.com/lan0/fullcalendar.git#v3.0.0-debounced",
     "fullcalendar-scheduler": "^1.3.2",
     "moment": "~2.13.0"
   }
