--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "ember-fullcalendar",
     "ember"
   ],
+  "repository": "https://github.com/scoutforpets/ember-fullcalendar",
   "license": "MIT",
   "author": {
     "name": "James Dixon",
     "url": "https://github.com/jamesdixon"
+  },
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
   },
   "contributors": [
     {
@@ -22,19 +27,17 @@
       "url": "https://github.com/rwwagner90"
     }
   ],
-  "repository": "https://github.com/scoutforpets/ember-fullcalendar",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "scripts": {
     "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.11.0",
-    "ember-cli-htmlbars": "^2.0.3",
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-moment-shim": "3.5.0",
     "ember-cli-node-assets": "0.2.2",
     "ember-invoke-action": "^1.5.0",
@@ -43,25 +46,30 @@
     "fullcalendar-scheduler": "^1.8.0"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.6.0",
-    "ember-cli": "~2.18.1",
+    "@ember/optional-features": "^0.6.3",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-cli": "~3.7.0",
     "ember-cli-app-version": "^3.1.3",
-    "ember-cli-dependency-checker": "^2.1.0",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-fastboot": "^1.1.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.7.0",
-    "ember-cli-qunit": "^4.3.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-release": "1.0.0-beta.2",
-    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "~2.18.0",
-    "loader.js": "^4.6.0"
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^3.4.1",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.7.0",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-try": "^1.0.0",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
