--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "ember-cli-node-assets": "0.2.2",
     "ember-invoke-action": "^1.5.0",
     "fastboot-transform": "^0.1.2",
-    "fullcalendar": "^3.6.0",
-    "fullcalendar-scheduler": "^1.8.0"
+    "fullcalendar": "4.0.0-alpha.3",
+    "fullcalendar-scheduler": "4.0.0-alpha.3"
   },
   "devDependencies": {
     "@ember/jquery": "^0.5.2",
