--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "@fullcalendar/core": "~4.0.0",
+    "@fullcalendar/daygrid": "~4.0.0",
+    "ember-auto-import": "^1.4.1",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-moment-shim": "3.5.0",
     "ember-cli-node-assets": "0.2.2",
     "ember-invoke-action": "^1.5.0",
-    "fastboot-transform": "^0.1.2",
-    "fullcalendar": "4.0.0-alpha.4",
-    "fullcalendar-scheduler": "4.0.0-alpha.4"
+    "fastboot-transform": "^0.1.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
